--- a/app/src/main/res/layout/activity_a__new_record.xml
+++ b/app/src/main/res/layout/activity_a__new_record.xml
@@ -8,101 +8,46 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="text"
         android:ems="10"
-        android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/textView8"
-        android:layout_marginStart="16dp"
-        android:id="@+id/editText2"
-        android:hint="enter the name" />
-
-    <TextView
-        android:text="* Name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="39dp"
-        android:id="@+id/textView"
-        android:layout_marginTop="17dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:textColorLink="@android:color/holo_green_light" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="text"
-        android:ems="10"
-        android:id="@+id/editText"
-        android:hint="Enter the date"
-        android:layout_alignBaseline="@+id/textView9"
-        android:layout_alignBottom="@+id/textView9"
-        android:layout_alignStart="@+id/editText8" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:id="@+id/editText4"
+        android:id="@+id/InseamNum"
         android:hint="length in inches"
         android:layout_alignBaseline="@+id/textView8"
         android:layout_alignBottom="@+id/textView8"
-        android:layout_alignStart="@+id/editText"
+        android:layout_alignStart="@+id/CommentTxt"
         android:inputType="number" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:id="@+id/editText5"
+        android:id="@+id/HipNum"
         android:hint="hip circumference"
         android:layout_alignBaseline="@+id/textView7"
         android:layout_alignBottom="@+id/textView7"
-        android:layout_alignStart="@+id/editText4"
+        android:layout_alignStart="@+id/InseamNum"
         android:inputType="number" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:id="@+id/editText6"
-        android:hint="waist circumference"
-        android:layout_alignBaseline="@+id/textView6"
-        android:layout_alignBottom="@+id/textView6"
-        android:layout_alignStart="@+id/editText5"
-        android:inputType="number" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:id="@+id/editText8"
-        android:hint="bust circumference"
-        android:layout_alignBaseline="@+id/textView4"
-        android:layout_alignBottom="@+id/textView4"
-        android:layout_alignStart="@+id/editText3"
-        android:inputType="number" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:id="@+id/editText9"
+        android:id="@+id/NeckNum"
         android:hint="neck circumference"
         android:layout_alignBaseline="@+id/textView3"
         android:layout_alignBottom="@+id/textView3"
-        android:layout_alignStart="@+id/editText2"
+        android:layout_alignStart="@+id/NameTxt"
         android:inputType="number" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:id="@+id/editText7"
+        android:id="@+id/ChestNum"
         android:hint="chest circumference"
         android:inputType="number"
         android:layout_alignBaseline="@+id/textView5"
         android:layout_alignBottom="@+id/textView5"
-        android:layout_alignStart="@+id/editText6" />
+        android:layout_alignStart="@+id/WaistNum" />
 
     <TextView
         android:text="Waist"
@@ -110,29 +55,19 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:id="@+id/textView6"
-        android:layout_below="@+id/editText7"
+        android:layout_below="@+id/ChestNum"
         android:layout_alignStart="@+id/textView5" />
-
-    <Button
-        android:text="submit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="19dp"
-        android:id="@+id/button"
-        android:layout_marginBottom="26dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="date"
         android:ems="10"
-        android:id="@+id/editText3"
+        android:id="@+id/DateDate"
         android:hint="Enter the date"
         android:layout_alignBaseline="@+id/textView2"
         android:layout_alignBottom="@+id/textView2"
-        android:layout_alignStart="@+id/editText9" />
+        android:layout_alignStart="@+id/NeckNum" />
 
     <TextView
         android:text="Date"
@@ -140,7 +75,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="18dp"
         android:id="@+id/textView2"
-        android:layout_below="@+id/editText2"
+        android:layout_below="@+id/NameTxt"
         android:layout_alignEnd="@+id/textView" />
 
     <TextView
@@ -149,7 +84,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="17dp"
         android:id="@+id/textView8"
-        android:layout_below="@+id/editText5"
+        android:layout_below="@+id/HipNum"
         android:layout_alignEnd="@+id/textView7" />
 
     <TextView
@@ -158,7 +93,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="18dp"
         android:id="@+id/textView3"
-        android:layout_below="@+id/editText3"
+        android:layout_below="@+id/DateDate"
         android:layout_alignStart="@+id/textView2" />
 
     <TextView
@@ -167,7 +102,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:id="@+id/textView7"
-        android:layout_below="@+id/editText6"
+        android:layout_below="@+id/WaistNum"
         android:layout_alignEnd="@+id/textView6" />
 
     <TextView
@@ -176,7 +111,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/textView9"
         android:layout_marginTop="16dp"
-        android:layout_below="@+id/editText4"
+        android:layout_below="@+id/InseamNum"
         android:layout_alignEnd="@+id/textView8" />
 
     <TextView
@@ -185,7 +120,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="19dp"
         android:id="@+id/textView4"
-        android:layout_below="@+id/editText9"
+        android:layout_below="@+id/NeckNum"
         android:layout_alignStart="@+id/textView3" />
 
     <TextView
@@ -194,14 +129,79 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="21dp"
         android:id="@+id/textView5"
-        android:layout_below="@+id/editText8"
+        android:layout_below="@+id/BustNum"
         android:layout_alignEnd="@+id/textView4" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:id="@+id/BustNum"
+        android:hint="bust circumference"
+        android:inputType="number"
+        android:layout_alignBaseline="@+id/textView4"
+        android:layout_alignBottom="@+id/textView4"
+        android:layout_alignStart="@+id/NeckNum" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="text"
+        android:ems="10"
+        android:id="@+id/CommentTxt"
+        android:layout_alignBaseline="@+id/textView9"
+        android:layout_alignBottom="@+id/textView9"
+        android:layout_alignStart="@+id/BustNum"
+        android:hint="hahahahahah" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="text"
+        android:ems="10"
+        android:layout_marginStart="11dp"
+        android:id="@+id/NameTxt"
+        android:hint="enter the name"
+        android:layout_alignBaseline="@+id/textView"
+        android:layout_alignBottom="@+id/textView"
+        android:layout_toEndOf="@+id/textView3" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:id="@+id/WaistNum"
+        android:hint="waist circumference"
+        android:inputType="number"
+        android:layout_alignBaseline="@+id/textView6"
+        android:layout_alignBottom="@+id/textView6"
+        android:layout_alignStart="@+id/HipNum" />
+
+    <TextView
+        android:text="* Name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="41dp"
+        android:id="@+id/textView"
+        android:layout_marginTop="29dp"
+        android:textColorLink="@android:color/holo_green_light"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:text="Save"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:id="@+id/SaveBot"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true" />
 
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="Note: the name field is mandatory for a record."
-        android:layout_above="@+id/button"
-        android:layout_alignStart="@+id/textView9" />
+        android:layout_above="@+id/SaveBot"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
