--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,11 @@
         android:scrollbars="vertical">
     </ListView>
 
+    <EditText
+        android:id="@+id/totalAmount"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="" />
 
     <Button
         android:id="@+id/AddNew"
@@ -25,6 +30,7 @@
         android:text="@string/AddNew"
         android:onClick="add"
         style="@style/Widget.AppCompat.Button.Colored" />
+
 
 
 </LinearLayout>
