Name Filed check added
TODO: Delete button.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,16 @@
         android:onClick="add"
         style="@style/Widget.AppCompat.Button.Colored" />
 
+    <Button
+        android:id="@+id/Delete"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Delete the record"
+        android:onClick="delete"
+        style="@style/Widget.AppCompat.Button.Colored" />
+
+
+
 
 
 </LinearLayout>
