--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,8 @@
 
     <ListView
         android:id="@+id/oldRecord"
+        android:choiceMode="singleChoice"
+        android:listSelector="@android:color/darker_gray"
         android:layout_width="fill_parent"
         android:layout_height="263dp"
         android:layout_weight="1"
