--- a/app/src/main/res/layout/activity_view_edit.xml
+++ b/app/src/main/res/layout/activity_view_edit.xml
@@ -183,14 +183,14 @@
 
     <Button
         android:text="Save Changes"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
         android:id="@+id/SaveChangeBot"
         android:background="@color/colorAccent"
+        android:onClick="saveChange"
+        style="@style/Widget.AppCompat.Button.Colored"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:onClick="saveChange" />
+        android:layout_alignParentEnd="true" />
 
 
 </RelativeLayout>
